@@ -1,11 +1,11 @@
 Package: tabbedPlots
 Type: Package
 Title: Tabbed Plots for R
-Version: 0.3-0
-Date: 2011-07-15
+Version: 0.3-1
+Date: 2011-07-17
 Author: Lars Hansen
 Maintainer: Tony Plate <tplate@acm.org>
-Depends: R (>= 2.7.0), grDevices, graphics, RGtk2 (>= 2.12.5-3), cairoDevice (>= 2.8)
+Depends: R (>= 2.7.0), grDevices, graphics, RGtk2 (>= 2.12.5-3), cairoDevice (>= 2.8), gWidgetsRGtk2
 Suggests: stats, lattice
 Description: Provides a window that shows multiple plots in tabs.
 License: GPL
